// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#<SelectField> should render props 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "select_data_id": undefined,
    }
  }
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      onChange={[Function]}
    >
      <option
        value="banana"
      >
        banana
      </option>
      <option
        value="apple"
      >
        apple
      </option>
      <option
        value="orange"
      >
        orange
      </option>
    </select>
  </div>
</form>
`;

exports[`#<SelectField> should render props from object keys 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "select_data_id": undefined,
    }
  }
>
  <div
    className="form-group"
  >
    <select
      className="form-control form-control-lg "
      name="fruitChoice"
      onChange={[Function]}
    >
      <option
        value={1}
      >
        first
      </option>
      <option
        value={2}
      >
        second
      </option>
      <option
        value={3}
      >
        third
      </option>
    </select>
  </div>
</form>
`;
